--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ Jinja2==2.7.3
 MarkupSafe==0.23
 Werkzeug==0.9.6
 cssselect==0.9.1
+gunicorn==19.1.1
 itsdangerous==0.24
 lxml==3.4.0
 requests==2.4.1
+wsgiref==0.1.2
